@@ -79,6 +79,8 @@ import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
+import ca.nrc.cadc.auth.AuthMethod;
+import ca.nrc.cadc.reg.Standards;
 import org.apache.log4j.Logger;
 
 import ca.nrc.cadc.auth.AuthenticationUtil;
@@ -166,13 +168,11 @@ public class WhoAmIServlet extends HttpServlet
         final RegistryClient registryClient = getRegistryClient();
 
         LocalAuthority localAuthority = new LocalAuthority();
-        URI umsServiceURI = localAuthority.getServiceURI("ums");
-
+        URI umsServiceURI = localAuthority.getServiceURI(Standards.UMS_WHOAMI_01.toString());
         log.debug("ums service uri: " + umsServiceURI);
 
-        final URL redirectURL =
-                registryClient.getServiceURL(
-                        URI.create(umsServiceURI.toString() + "#users"), scheme, USER_GET_PATH);
+        final URL serviceURL = registryClient.getServiceURL(umsServiceURI, Standards.UMS_USERS_01, AuthMethod.CERT);
+        final URL redirectURL = new URL(serviceURL.toExternalForm() + USER_GET_PATH);
 
         // Take the first one.
         final String redirectUrl =
@@ -181,8 +181,7 @@ public class WhoAmIServlet extends HttpServlet
 
         log.debug("redirecting to " + redirectURI.toASCIIString());
 
-        response.sendRedirect(redirectURI.getPath() + "?"
-                              + redirectURI.getQuery());
+        response.sendRedirect(redirectURI.getPath() + "?" + redirectURI.getQuery());
     }
 
     /**
